플레이어 수정전 업데이트

--- a/Bomberman/Bomberman.vcxproj.filters
+++ b/Bomberman/Bomberman.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="Ending.h">
       <Filter>소스 파일\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectFactory.h">
+      <Filter>소스 파일\Manage</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
