--- a/Bomberman/Bomberman.vcxproj
+++ b/Bomberman/Bomberman.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Logo.h" />
     <ClInclude Include="MainUpdate.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectFactory.h" />
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene.h" />
